- bios/font.c: now contains (nearly) all font related stuff (MAD)
- bios/font.h: headers for that (MAD)
- bios/lineainit.c: stripped down to pure screen setting (MAD)
- bios/lineavars.h: put font and vt52 related stuff in seperate files (MAD)
- bios/lineainit.c: ripped out color setting (MAD)

2004-12-15
-  aes/gem_rsc.c: Changed background color of the desktop to green. (THH)

2005-01-15
- bios/disk.c: added DOS PTBL recognition (primary partitions only) (joy)
- bios/xhdi.c: reformatted (joy)
- bios/blkdev.[ch]: added flag for byteswap (unused yet, TODO) (joy)

2005-01-25
- desk/deskmain.c, desk/deskwin.c: Fixed a bug that caused a crash when
  dragging icons on the desktop. (THH)

2005-04-11
- desk/desk_rsc.c: Changed the string and button sizes in the desktop dialogs
  so that the non-english versions of EmuTOS look much better. (THH)
- po/*.po: Slightly updated the language files. (THH)

2005-04-12
- vdi/vdi_fill.c vdi/vdi_misc.c vdi/vdi_fill.c desk/deskmain.c cli/command.c
  bios/vt52.h  bios/floppy.c aes/geminit.c: Applied patches from Markus
  Oberhumer that fix emutos compilation when using GCC 3.3.5. (THH)
- */*.c */*.h: Started to implement proper prototypes for all functions (to
  compile EmuTOS with -Wmissing-prototypes and -Wstrict-prototypes). (THH)

2005-04-13
- bios/nvram.c: Added patch from Gerhard Stoll that checks for valid parameters
  in the function nvmaccess(). (THH)
- po/es.po: Added up-to-date translations from Gabriel Huertas. (THH)
- bios/tosvars.*: Fixed annoying bug: The two system variables _bell_hook and
  _kcl_hook were linked at a wrong position due to a missing ".global" in the
  assembler file and a missing "extern" in the header file. (THH)

2005-04-14
- po/es.po: Some more updates from Gabriel Huertas. (THH)
- country.mk: Enabled spanish language. (THH)
- bios/blkdev.h: Fixed a signed/unsigned comparison problem that occured in
  the function blkdev_mediach() when it checks the serial number. (THH)